--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"dist/cli.js"
 	],
 	"dependencies": {
+		"@types/axios": "^0.14.0",
 		"@types/ink-divider": "^2.0.2",
 		"@types/uuid": "^8.3.3",
+		"axios": "^0.24.0",
 		"ink": "^3.2.0",
 		"ink-divider": "^3.0.0",
 		"meow": "^9.0.0",
@@ -58,6 +60,7 @@
 		"@components": "dist/components",
 		"@seed": "dist/seed",
 		"@constants": "dist/constants",
-    "@hooks": "dist/hooks"
+		"@hooks": "dist/hooks",
+		"@services": "dist/services"
 	}
 }
