--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@types/axios": "^0.14.0",
 		"@types/ink-divider": "^2.0.2",
+		"@types/ora": "^3.2.0",
 		"@types/uuid": "^8.3.3",
 		"axios": "^0.24.0",
 		"ink": "^3.2.0",
