--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 	],
 	"dependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/bcrypt": "^5.0.0",
 		"@types/ink-divider": "^2.0.2",
+		"@types/node": "^16.11.10",
 		"@types/ora": "^3.2.0",
 		"@types/uuid": "^8.3.3",
 		"axios": "^0.24.0",
+		"bcrypt": "^5.0.1",
 		"ink": "^3.2.0",
 		"ink-divider": "^3.0.0",
 		"meow": "^9.0.0",
